--- a/.github/workflows/android_quick_tests.yml
+++ b/.github/workflows/android_quick_tests.yml
@@ -12,6 +12,7 @@ jobs:
   quick-validation:
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    if: ${{ !cancelled() }}
     
     steps:
     - name: Checkout code
@@ -24,7 +25,7 @@ jobs:
         java-version: '11'
         
     - name: Cache Maven dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
@@ -40,6 +41,7 @@ jobs:
       run: mvn test-compile
       
     - name: Run Static Analysis (if applicable)
+      if: ${{ !cancelled() }}
       run: |
         # Verificar se existem arquivos de configuração para análise estática
         if [ -f "checkstyle.xml" ] || [ -f "pmd.xml" ] || [ -f "spotbugs.xml" ]; then
@@ -50,6 +52,7 @@ jobs:
         fi
         
     - name: Validate Test Configuration
+      if: ${{ !cancelled() }}
       run: |
         echo "Validating TestNG suites..."
         if [ -f "src/test/resources/suites/contatos/android-contatos-suite.xml" ]; then
@@ -68,14 +71,16 @@ jobs:
         fi
         
     - name: Check Dependencies
+      if: ${{ !cancelled() }}
       run: mvn dependency:analyze
       
     - name: Generate Dependency Tree
+      if: ${{ !cancelled() }}
       run: mvn dependency:tree > dependency-tree.txt
       
     - name: Upload Build Artifacts
-      if: always()
-      uses: actions/upload-artifact@v3
+      if: ${{ !cancelled() && always() }}
+      uses: actions/upload-artifact@v4
       with:
         name: build-validation-artifacts
         path: |
